# ncbi-gene

./: .copier-answers.yml  .cruft.json  .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  download.yaml  gene.py  gene.yaml  justfile  mkdocs.yaml  ncbi_gene.py  ncbi_gene.yaml  pyproject.toml  requiments.txt  requirements.txt
.github/workflows/: create-release.yaml  release.yaml  test.yaml  update-docs.yaml
docs/: 404.html  index.html  index.md  nodes_report.tsv  objects.inv  sitemap.xml
docs/search/: search_index.json
scripts/: generate-rdf.py  generate-report.py  get-latest-report.py  write_metadata.py
src/: transform.py  transform.yaml  versions.py
src/ncbi_gene/: __init__.py  cli.py  metadata.yaml  taxon_lookup.py  transform.py  transform.yaml
tests/: test_transform.py
